docs: document Image Studio and terminal fallback
Add CHANGELOG entries (Image Studio under Added, terminal fallback under Fixed), a root README section, and an lg3d-incubator README section covering the app, its JAI dependency and the dev-mode native-terminal caveat.